$Id: History,v 1.124 2001-05-25 10:38:12 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

25th May 2001  John Allison
- Bug fix in G4ASCIITree.cc: initialise fVerbosity(0).

24th May 2001  John Allison  (vis-V03-01-03)
- Added missing files G4ASCIITreeMessenger.hh/cc.
- Bug fix in G4ASCIITreeMessenger.cc: currentAsDefault = true.
- Drivers in alphabetical order in MyVisManager.cc.

23rd May 2001  John Allison
- Eliminated Linux pedantic warnings, except FukuiRenderer, VRML and OPACS.

22nd May 2001  John Allison
- Refined ASCIITree.

21st May 2001  John Allison (vis-V03-01-02)
- Minor bug corrections (mostly to fix things that used to work with the
  old /vis~/ commands but ceased to work with the new /vis/commands:
  o If a scene is empty at drawing time, the "world" is added.
  o Window size hint now works for OpenGL.
- Fixed some minor warnings for strict C++ (size_t, etc.).

18th May 2001 John Allison